变ModelBuilder.value方法返回String